[package]
name = "vrxbridge"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
rmp-serde = "1.3.0"
# tokio + rustls with ring
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls-ring", "derive" ] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.214", features = ["derive"] }
anyhow = "1.0.91"
log = "0.4.22"
serde_json = "1.0.132"
reqwest = { version = "0.12.9", features = ["json"] }
colog = "1.3.0"
hexdump = "0.1.2"
serenity = "0.12.2"
dotenvy = "0.15.7"
byteorder = "1.5.0"
