[package]
name = "vrxbridge"
version = "0.2.0"
edition = "2021"

[dependencies]
rmp-serde = "1.3.0"
# tokio + rustls with ring
tokio = { version = "1", features = ["full"] }
rhexdump = "0.2.0"
serde = { version = "1.0.214", features = ["derive"] }
anyhow = "1.0.100"
log = "0.4.29"
colog = "1.4.0"
serenity = "0.12.5"
dotenvy = "0.15.7"
byteorder = "1.5.0"
