[package]
name = "vrxbridge"
version = "0.2.0"
edition = "2021"

[dependencies]
rmp-serde = "1.3.0"
tokio = { version = "1", features = ["full"] }
rhexdump = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_tuple = "0.5"
serde_json = "1.0"
serde-big-array = "0.5"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "json", "macros", "chrono", "uuid"] }
anyhow = "1.0"
log = "0.4"
colog = "1.4"
serenity = "0.12"
dotenvy = "0.15"
byteorder = "1.5"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
